styles.css
html {
    margin: 0 15%;
}

body {
    background-color: #073B4C;
    color: #FFD166;
}

h1,
h2 {
    color: #EF476F;
}

.nav-link {
    color: #EF476F;
}

.nav-link:hover {
    color: #06D6A0;
}

.navi {
    background-color: #073B4C;
}

main {
    display: grid;
    grid-template-columns: 2fr 1fr;
    padding-left: 11px;
    margin-top: 4rem;
    text-align: justify;
}

footer {
    text-align: center;
    margin-top: 2rem;
    padding: 7rem 0 0 0;
    color: #EF476F;
}

.profile-pic {
    border-radius: 10%;
    width: 100%;
}

.profile-pic-cont {
    justify-self: end;
}

.icons {
    font-size: 2rem;
    margin: 2rem;
    color: #FFD166;
}

.icon {
    margin-right: 2rem;
    font-size: 2rem;
    color: #FFD166;
}

.icon:hover,
.icons:hover {
    color: #06D6A0;
}

a:hover {
    color: #06D6A0;
}

.about-txt {
    margin-top: 1.5rem;
}

.skills {
    margin-top: 5rem;
}

.proj-img {
    border-radius: 10%;
    margin-top: 2rem;
    border: 15px solid;
    border-color: #FFD166;
    transition: transform .2s;
}

.proj-img:hover {
    border-color: #06D6A0;
    transform: scale(1.1);
}

.img-cont {

    padding: 5rem;
}

.main-cont {
    margin-top: 6em;
    margin-bottom: 2rem;
}

.cont-icon {
    font-size: 1.7rem;
    margin-top: 1rem;
    margin-right: 1rem;
}

.cont-foot {
    margin-top: 33em;
}

.paint-dot {
    position: absolute;
    width: 8px;
    height: 8px;
    border-radius: 50%;
    background-color: #118AB2;
    pointer-events: none;
}

.sketch {
    display: none;
    height: 500px;
    width: 700px;
    background-color: #FFD166;
}

@media only screen and (max-width: 1600px) {
    html {
        margin: 0 13%;
    }

    main {
        display: grid;
        grid-template-columns: 2fr 1fr;
        padding-left: 11px;
        margin-top: 4rem;
        text-align: justify;
    }

    .profile-pic {
        border-radius: 10%;
        width: 100%;
    }

    .profile-pic-cont {
        margin-top: 3rem;
        margin-left: 2rem;
        justify-self: end;
    }

    .col-huge-6 {
        flex-basis: 50%;
        max-width: 50%;
    }
}

@media only screen and (max-width: 1024px) {
    .profile-pic-cont {
        margin-top: 3.7rem;
    }

    .icons {
        margin: 1.1rem;
    }

    .icon {
        margin-right: 1.1rem;
    }

    .col-med-12 {
        flex-basis: 100%;
        max-width: 100%;
    }

    .sketch {
        width: 750px;
    }

    .container-fluid {
        text-align: center;
    }

    .nav-link {
        font-size: 1.1rem;
    }
}

@media only screen and (max-width: 768px) {
    html {
        margin: 0 10%;
    }

    main {
        display: block;
        padding-left: 11px;
        margin-top: 4rem;
        text-align: justify;
    }

    .profile-pic-cont {
        display: none;
    }

    .navi-tit {
        font-size: 3rem;
    }

    .nav-link {
        font-size: 2rem;
        margin-top: 1.5rem;
    }

    .abt-tit {
        font-size: 3rem;
    }

    p {
        font-size: 1.3rem;
    }

    .icons {
        font-size: 3rem;
    }

    .icon {
        font-size: 3rem;
    }

    .sketch {
        width: 600px;
    }
}

@media only screen and (max-width: 480px) {
    html {
        margin: 0 4%;
    }

    .sketch {
        width: 450px;
    }
    
    .img-cont {

        padding: 1rem;
        margin-top: 5rem;
    }
}

@media only screen and (max-width: 380px) {
    html {
        margin: 0 2%;
    }

    .sketch {
        width: 450px;
    }

    p {
        margin-top: 3rem;
    }

    .icons {
        font-size: 4rem;
    }

    .icon {
        font-size: 4rem;
    }

    .fa-git{
        margin-left: 1rem;
    }

    .hub{
        margin-left: 0;
    }

    .sketch {
        width: 360px;
    }
    
    .img-cont {

        padding: 1rem;
        margin-top: 5rem;
    }
}

.rainbow {
    animation-name: rainbow;
    animation-duration: 4s;
    animation-iteration-count: infinite;
    animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  }
  
  @keyframes rainbow {
    0%   { color: #FFBE0B; transform: translateY(0); }
    25%  { color: #FB5607; transform: translateY(-0.3em); }
    50%  { color: #FF006E; transform: translateY(0.3em); }
    75%  { color: #8338EC; transform: translateY(-0.2em); }
    100% { color: #3A86FF; transform: translateY(0); }
  }
  
  #rainbow-text {
    font-size: 36px;
    font-weight: bold;
    display: inline-block;
  }
  
  #rainbow-text span {
    display: inline-block;
    animation-name: wave;
    animation-duration: 1s;
    animation-iteration-count: infinite;
    animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  }
  
  #rainbow-text span:nth-child(1) {
    animation-delay: 0.1s;
  }
  
  #rainbow-text span:nth-child(2) {
    animation-delay: 0.2s;
  }
  
  #rainbow-text span:nth-child(3) {
    animation-delay: 0.3s;
  }
  
  #rainbow-text span:nth-child(4) {
    animation-delay: 0.4s;
  }
  
  #rainbow-text span:nth-child(5) {
    animation-delay: 0.5s;
  }
  
  @keyframes wave {
    0%   { transform: translateY(0); }
    50%  { transform: translateY(-0.5em); }
    100% { transform: translateY(0); }
  }
  

